[distributed execution][unneeded parameter for gradle test step]