@@ -64,7 +64,6 @@ allprojects {
             includeEngines("spek2")
         }
         maxHeapSize = "1024m"
-        jvmArgs = listOf("-XX:MaxPermSize=256m")
     }
 
     tasks.jar {
